fixed transparent menu background on mobile view

--- a/styles/layout/navbar.module.scss
+++ b/styles/layout/navbar.module.scss
@@ -85,6 +85,7 @@
     height: 100vh;
     width: 100vw;
     z-index: -20;
+    background-color: white;
 
     &__nav {
       display: flex;
